--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ Built
 *.lvlps
 *.aliases
 Tests/TLCD System Tests/Assets/TLCD System/Logs/
+Tests/TLCD System Tests/Temp/
+Tests/TLCD System Tests/Assets/TLCD RT System/Logs/
+Tests/TLCD System Tests/Assets/TLCD Windows System/.cache/
+Tests/TLCD System Tests/Assets/TLCD RT System/.cache/
+Tests/TLCD System Tests/Assets/TLCD Windows System/Logs/
