--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Tests/TLCD System Tests/Assets/TLCD RT System/Logs/
 Tests/TLCD System Tests/Assets/TLCD Windows System/.cache/
 Tests/TLCD System Tests/Assets/TLCD RT System/.cache/
 Tests/TLCD System Tests/Assets/TLCD Windows System/Logs/
+Tests/System Tests/Temp/
