--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Tests/TLCD System Tests/Assets/TLCD Windows System/.cache/
 Tests/TLCD System Tests/Assets/TLCD RT System/.cache/
 Tests/TLCD System Tests/Assets/TLCD Windows System/Logs/
 Tests/System Tests/Temp/
+Tests/System Tests/Assets/TLCD System/.cache/
