Ignored the Logs folder in the TLCD System VS project asset.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Tests/TLCD System Tests/Assets/TLCD RT System/.cache/
 Tests/TLCD System Tests/Assets/TLCD Windows System/Logs/
 Tests/System Tests/Temp/
 Tests/System Tests/Assets/TLCD System/.cache/
+Tests/System Tests/Assets/TLCD System/Logs/
