--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,8 @@ stages:
           bitness: '64bit'
         - version: '2023'
           bitness: '64bit'
+        - version: '2024'
+          bitness: '64bit'
 
       buildSteps:
         - projectLocation: 'Source\Telemetry Custom Device.lvproj'
