--- a/control
+++ b/control
@@ -13,3 +13,13 @@ Section: Add-Ons
 XB-DisplayVersion: {quarterly_display_version}
 XB-DisplayName: NI Telemetry Custom Device for VeriStand {veristand_version}
 Depends: ni-veristand-{labview_version} (>= {labview_short_version}.0.0)
+Description-zh-CN: 为NI VeriStand {veristand_version}提供Telemetry自定义设备支持
+XB-DisplayName-zh-CN: NI Telemetry Custom Device for VeriStand {veristand_version}
+Description-de: Stellt Unterstützung für benutzerdefinierte Telemetriegeräte für NI VeriStand {veristand_version} bereit.
+XB-DisplayName-de: NI Telemetry Custom Device für VeriStand {veristand_version}
+Description-fr: Fournit le support pour le périphérique personnalisé de télémétrie pour NI VeriStand {veristand_version}
+XB-DisplayName-fr: NI Telemetry Custom Device for VeriStand {veristand_version}
+Description-ja: NI VeriStand {veristand_version}用のテレメトリカスタムデバイスのサポートを提供します。
+XB-DisplayName-ja: NI Telemetryカスタムデバイス - VeriStand {veristand_version}用
+Description-ko: NI VeriStand {veristand_version}을(를) 위한 NI Telemetry Custom Device의 지원을 제공합니다.
+XB-DisplayName-ko: NI Telemetry Custom Device - VeriStand {veristand_version} 지원
