updated pipeline schedule

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,8 +14,8 @@ resources:
       name:       ni/niveristand-custom-device-build-tools
 
 schedules:
-- cron: '0 0 * * *'
-  displayName: Daily midnight build
+- cron: '30 12 * * *'
+  displayName: Daily 6 PM (IST) build
   branches:
     include:
     - main
